# adaptinsure

./: .cursorrules  .env.example  .gitignore  LICENSE  PROJECT.md  README.md  TASKS.md  pyproject.toml  requirements.txt
docs/: PHASE_1_SPEC.md  PHASE_2_SPEC.md  PHASE_5_SPEC.md
samples/acord_carrier/: README.md  sample_claims.xml  schema.xsd
samples/guidewire_carrier/: README.md  api_spec.json  sample_claims.json
samples/legacy_carrier/: README.md  claims.csv  contacts.csv  data_dictionary.md  exposures.csv  transactions.csv
src/: __init__.py  config.py  exceptions.py
src/discovery/: __init__.py  analyzer.py  codes.py  engine.py  merge.py  profile.py  warnings.py
src/generator/: __init__.py  codes.py  context_builder.py  engine.py  name_utils.py  registry.py  schema_introspector.py
src/llm/: __init__.py  client.py
src/mapping/: __init__.py  codes.py  confidence.py  config.py  direct_matcher.py  engine.py  gap_analyzer.py  knowledge_base.py  schema_registry.py  semantic_matcher.py  transform_detector.py
src/monitor/: __init__.py  alerter.py  approval.py  codes.py  config_applier.py  config_loader.py  detector.py  differ.py  expected_schema.py  proposer.py  (+1 more)
tests/: __init__.py  conftest.py  test_base_adapter.py  test_discovery.py  test_discovery_analyzer.py  test_discovery_parsers.py  test_discovery_warnings.py  test_drift_scenarios.py  test_end_to_end.py  test_exceptions.py  test_full_pipeline.py  test_generator.py  test_llm_client.py  test_mapping.py  test_mapping_semantic.py  test_monitor.py  test_schema.py  test_testing.py  test_validators.py
(+32 files in other folders)
